fixed media query link, made buttons float right on small screens, made profile image larger on small screens and centered image and text on about page.

--- a/style.css
+++ b/style.css
@@ -27,19 +27,20 @@ body{
 #dragon{
     background-color:brown;
     background-image: url(./dragonhead.png);
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     height: 300px;
 }
 #flower{
     background-image: url(./purple.jpg);
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     height: 300px;
 }
 #band{
     background-image: url(./BvbLogo.jpg);
-    background-size: contain;
+    background-size: cover;
+    background-position: center;
     height: 300px;
 }
 .project{
@@ -58,20 +59,14 @@ i{
     padding:5px;
 }
 @media screen and (max-width: 768px){
-    header{
-        height:200px;
+    .back{
+        float:right;
     }
-    #dragon{
-        width:100%;
-    }
-    #flower{
-        width:100%;
-    }
-    #band{
-        width:100%;
-    }
-    .text{
-        font-size:48px;
-    }
-
+   .bio{
+       text-align:center;
+   }
+   .prof{
+       height:300px;
+       width:300px;
+   }
 }
